# saturn.ag

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile  README.md  index.css  index.html  input.css  tailwind.config.js
.github/workflows/: gh-pages-deploy.yml
assets/: output.css
src/: main.rs  state.rs
src/components/: asset_select.rs  connection.rs  local_storage.rs  mod.rs  providers.rs  swap.rs  wallet.rs
src/database/: client.rs  mod.rs  tokens.rs
style/: output.css
