[package]
name = "saturn-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7.4", features = ["csr"] }
reactive_stores = "0.1.3"
console_error_panic_hook = "0.1.7"
log = "0.4.21"
wasm-logger = "0.2.0"
solana-sdk = "1.18.0"
leptos-use = { version = "0.15.5", features = ["storage"] }
wallet-adapter = { git = "https://github.com/JamiiDao/SolanaWalletAdapter" }
