[package]
name = "saturn-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
dioxus-logger = "0.6.0"
console_error_panic_hook = "0.1.7"
solana-sdk = "1.18.0"
wallet-adapter = { git = "https://github.com/JamiiDao/SolanaWalletAdapter" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
