[package]
name = "saturn-aggregator"
version = "0.1.0"
edition = "2021"

[features]
default = ["web"]
web = ["dioxus/web"]

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
dioxus-logger = "0.6.0"
console_error_panic_hook = "0.1.7"
solana-sdk = "1.18.0"
wallet-adapter = { git = "https://github.com/JamiiDao/SolanaWalletAdapter" }
gloo-storage = "0.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros",
] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[[bin]]
name = "saturn_cli"
path = "src/bin/cli.rs"
